Final merged web

--- a/about.html
+++ b/about.html
@@ -56,10 +56,10 @@
               <a href="about.html" class="nav-link active"> About </a>
             </li>
             <li class="nav-item active">
-              <a href="" class="nav-link active"> Services </a>
+              <a href="services.html" class="nav-link active"> Services </a>
             </li>
             <li class="nav-item active">
-              <a href="" class="nav-link active"> Contact </a>
+              <a href="contact.html" class="nav-link active"> Contact </a>
             </li>
           </ul>
         </div>
@@ -70,7 +70,7 @@
     <div class="container-fuild">
       <!--begining of top section-->
       <div class="row mx-5">
-        <p class="fw-bold">About</p>
+        <p class="h5">About</p>
         <p class="display-5 fw-bold">We are product engineering specialists</p>
         <p class="lead" style="color: #374574">
           Lorem ipsum dolor sit amet, consectetuer adipiscingLorem ipsum dolor
@@ -229,6 +229,7 @@
       <!--end of location section-->
     </div>
     <!--end of the about page section-->
+    
 
     <!--**Footer** -->
     <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
@@ -250,10 +251,10 @@
             </div>
             <div class="row pt-4 mx-3">
               <div class="col-4">
-                <a href="" class="nav-link active"> Services </a>
+                <a href="services.html" class="nav-link active"> Services </a>
               </div>
               <div class="col-4">
-                <a href="" class="nav-link active"> Contact </a>
+                <a href="contact.html" class="nav-link active"> Contact </a>
               </div>
             </div>
           </div>
@@ -326,7 +327,11 @@
         </div>
         <!--Grid row-->
       </div>
-      <!-- Grid container -->
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-white" href="index.html">HCCS Web</a>
+      </div>
     </footer>
     <!--End of footer-->
   </body>
