minor padding and margin fixes

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     <!--begining of the about page section-->
     <div class="container-fuild">
       <!--begining of top section-->
-      <div class="row mx-5">
+      <div class="row mx-5 mt-4">
         <p class="h5">About</p>
         <p class="display-5 fw-bold">We are product engineering specialists</p>
         <p class="lead" style="color: #374574">
@@ -232,7 +232,7 @@
     
 
     <!--**Footer** -->
-    <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
+    <footer class="bg-dark-blue text-white text-center text-lg-start mt-5  pt-4">
       <!-- Grid container -->
       <div class="container p-2">
         <!--Grid row-->
