--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
   <!--**Contact section**-->
   <div class="container-fluid">
-    <div class="row">
+    <div class="row mt-4">
       <div class="col-12">
         <!--begining of top section-->
         <div class="row mx-5 text-dark-blue">
@@ -215,7 +215,7 @@
   </div>
 
   <!--**Footer** -->
-  <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
+  <footer class="bg-dark-blue text-white text-center text-lg-start mt-5 pt-4">
     <!-- Grid container -->
     <div class="container p-2">
       <!--Grid row-->
