--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <!--end of awards section-->
 
     <!--**Footer** -->
-    <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
+    <footer class="bg-dark-blue text-white text-center text-lg-start mt-5 pt-4">
       <!-- Grid container -->
       <div class="container p-2">
         <!--Grid row-->
