--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
         </div>
       </nav>
       <!--**End of the Navbar** -->
-      <div class="mx-5 pb-4">
+      <div class="mx-5 pb-4 mt-4">
         <p class="ms-4 h5" >Services</p>
       <!--What we do section-->
       <p class=" ms-4 display-5 fw-bold text-dark-blue" >What we do</p>
@@ -228,7 +228,7 @@
       </div>
 
       <!--**Footer** -->
-    <footer class="bg-dark-blue text-white text-center text-lg-start mt-3">
+    <footer class="bg-dark-blue text-white text-center text-lg-start mt-5 pt-4">
         <!-- Grid container -->
         <div class="container p-2">
           <!--Grid row-->
