--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
     <p class="ms-4 fs-6" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
     <div class="container text-center">
       <div class="row">
-        <div class="col">
+        <div class="col" >
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stack" viewBox="0 0 16 16" mt-4> 
             <path d="m14.12 10.163 1.715.858c.22.11.22.424 0 .534L8.267 15.34a.598.598 0 0 1-.534 0L.165 11.555a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.66zM7.733.063a.598.598 0 0 1 .534 0l7.568 3.784a.3.3 0 0 1 0 .535L8.267 8.165a.598.598 0 0 1-.534 0L.165 4.382a.299.299 0 0 1 0-.535L7.733.063z"/>
             <path d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.598.598 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.659z"/>
@@ -139,7 +139,7 @@
       <div class="col-md-8" style="display:inline;">
         <div class="row justify-content-around">
           <div class="col-4">
-            <div class="row justify-content-around">
+            <div class="row justify-content-between">
               <div class="col-4">
                 <p class="ms-4 fs-5" >React<br><p class="text-body-secondary ms-4">React,Redux,redux-saga</p></p>
               </div>
@@ -179,11 +179,11 @@
           <div class="col-4">
             <div class="row justify-content-around">
               <div class="col-4">
-                <p class="ms-4 fs-5" >Vue<br><p class="text-body-secondary ms-4"></p></p>
+                <p class="ms-4 fs-5" >Vue<br><p class="text-body-secondary ms-4"></p>Meterial,Ant Design, Appllo</p>
               </div>
               <div class="col-4">
                 <span>
-                  <img class="w-100 float-end" style="max-width: 50px; max-height:50px; border-radius: 5px;" src="images/technology1.png" >
+                  <img class="w-100 float-end" style="max-width: 50px; max-height:50px; border-radius: 5px;" src="images/technology4.jpg" >
                 </span>
               </div>
             </div><hr>
